feat: minimum webpack 5 configuration (the asset function does not work)

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1>Hellow World!</h1>
-    <img src="./image/Museum-I-.png" alt="">
+    <img src="./assets/Museum-I-.png" alt="">
+<h2>привет</h2>
+<h3>fggalkgjagja</h3>
+
   </body>
 </html>
