--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,13 @@
   </head>
   <body>
     <h1>Hellow World!</h1>
-    <img src="./assets/Museum-I-.png" alt="">
+    <img src="./assets/images/Cross-Check Submit JavaScriptFront-end 2021Q3-MUSEUM-2021-09-20 230459.jpg" alt="">
+    <img src="./assets/images/Museum-I-.png" alt="">
 <h2>привет</h2>
 <h3>fggalkgjagja</h3>
-
+<div class="fff"></div>
+<div class="fff"></div>
+<div class="fff"></div>
+<div class="fff"></div>
   </body>
 </html>
